@@ -34,6 +34,10 @@ if \code{test} is a \linkS4class{SummarizedExperiment} object.}
 
 \item{check.missing}{Logical scalar indicating whether rows should be checked for missing values (and if found, removed).}
 
+\item{allow.lost}{Logical scalar indicating whether to use lost markers in references where they are available.}
+
+\item{warn.lost}{Logical scalar indicating whether to emit a warning if markers from one reference in \code{trained} are \dQuote{lost} in other references.}
+
 \item{BNPARAM}{A \linkS4class{BiocNeighborParam} object specifying the algorithm to use for building nearest neighbor indices.}
 
 \item{BPPARAM}{A \linkS4class{BiocParallelParam} object specifying how parallelization should be performed, if any.}
@@ -62,8 +66,8 @@ The label from the results with the highest score for each cell is retained.
 Unlike \code{\link{combineCommonResults}}, this does not assume that each run of \code{\link{classifySingleR}} was performed using the same set of common genes, instead recomputing the scores for comparison across references.
 }
 \details{
-Here, the strategy is to performed classification separately within each reference, 
-then collating the results to choose the label with the highest score across references.
+Here, the strategy is to perform classification separately within each reference, 
+then collate the results to choose the label with the highest score across references.
 For a given cell in \code{test}, we extract its assigned label from \code{results} for each reference.
 We also retrieve the marker genes associated with that label and take the union of markers across all references.
 This defines a common feature space in which the score for each reference's assigned label is recomputed using \code{ref};
@@ -75,11 +79,23 @@ Obviously, \code{combineRecomputedResults} is slower as it does require recomput
 but the within-reference calls are faster as there are fewer genes in the union of markers for assigned labels
 (compared to the union of markers across all labels, as required by \code{\link{combineCommonResults}}),
 so it is likely that the net compute time should be lower.
-
-It is strongly recommended that the universe of genes be the same across all references.
-The intersection of genes across all \code{ref} and \code{test} is used when recomputing scores,
-and differences in the availability of genes between references may have unpredictable effects.
 }
+\section{Dealing with mismatching gene availabilities}{
+
+It is strongly recommended that the universe of genes be the same across all references in \code{trained}.
+If this is not the case, the intersection of genes across all \code{trained} will be used in the recomputation.
+This at least provides a common feature space for comparing correlations, 
+though differences in the availability of markers between references may have unpredictable effects on the results
+(and so a warning will be emitted by default, when when \code{warn.lost=TRUE}).
+
+That said, the intersection may be too string when dealing with many references with diverse feature annotations. 
+In such cases, we can set \code{allow.lost=TRUE} so that the recomputation for each reference will use all available markers in that reference.
+The idea here is to avoid penalizing all references by removing an informative marker when it is only absent in a single reference.
+We hope that the recomputed scores are still roughly comparable if the number of lost markers is relatively low,
+coupled with the use of ranks in the calculation of the Spearman-based scores to reduce the influence of individual markers.
+This is perhaps as reliable as one might imagine, so setting \code{allow.lost=TRUE} should be considered a last resort.
+}
+
 \examples{
 # Making up data.
 ref <- .mockRefData(nreps=8)
